remote forms post continued

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:          Dennis Hellweg
 description:    "Personal blog of Dennis Hellweg"
 # baseurl:        "/tale"
-url:            "https://dennitz.github.io"
+url:            "https://dennishellweg.com"
 
 # Google Analytics
 # google_analytics: UA—XXXXXXXX-X
