--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,14 +1,3 @@
-- link: https://spotmatters.co
-  image: /assets/spotmatters.jpg
-  alt: SpotMatters
-  description: 
-    <p>
-      <a href="https://spotmatters.co">spotmatters.co</a> is an easy way to find surfspots that are suitable when travelling in a van. 
-    </p>
-    <p>
-      I created all the content and built the site in Ruby on Rails using Bootstrap for styling. The site is deployed on Heroku.
-    </p>
-    
 - link: https://github.com/Dennitz/Timetable
   image: /assets/timetable.jpg
   alt: Timetable app
@@ -18,5 +7,16 @@
     </p>
     <p>
     The app was downloaded from the App Store about 3000 times.
+    </p>
+    
+- link: \#
+  image: /assets/spotmatters.jpg
+  alt: SpotMatters
+  description: 
+    <p>
+      <spotmatters.co (discontinued) is an easy way to find surfspots that are suitable when travelling in a van. 
+    </p>
+    <p>
+      I created all the content and built the site in Ruby on Rails using Bootstrap for styling. The site is deployed on Heroku.
     </p>
     
