update timetable app copy

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,10 +3,10 @@
   alt: Timetable app
   description: 
     <p>
-      A <a href="https://github.com/Dennitz/Timetable">timetable app</a> where I did all the design work and created all the CSS from scratch. I built the app with React Native and Redux.
+      A <a href="https://github.com/Dennitz/Timetable">timetable app</a> that I designed and built from scratch with React Native and Redux.
     </p>
     <p>
-    The app was downloaded from the App Store about 3000 times.
+    The app used to be listed on the Apple App Store and was downloaded about 3000 times.
     </p>
     
 - link: \#
